# dismissive

./: .gitignore  LICENSE  README.md  build  build-all  conf  init  run  schema.sql  stack.yaml
core/: README.md  dismissive-core.cabal
core/Dismissive/: Api.hs  Types.hs
core/Dismissive/Internal/: Stack.hs  Types.hs
mailer/: Mailer.hs  Main.hs  README.md  dismissive-mailer.cabal  mailer.conf
mailer/Dismissive/: Mailer.hs
mailer/Dismissive/Mailer/: Internal.hs
receiver/: Main.hs  README.md  Types.hs  dismissive-receiver.cabal
sender/: Main.hs  dismissive-sender.cabal
servant/: README.md  dismissive-servant.cabal
servant/Dismissive/: Servant.hs
web/: Landing.hs  Main.hs  README.md  dismissive-web.cabal  web.conf
web/static/: landing.css  landing.js  main.css  main.html
