name:                dismissive-core
version:             0.1.0.0
license:             MIT
license-file:        ../LICENSE
author:              Ian Henry
maintainer:          ianthehenry@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends: base <5.0, base-prelude
               , persistent ==2.2
               , persistent-template ==2.1.*
               , persistent-postgresql ==2.2, monad-logger
               , base16-bytestring ==0.1.1.*
               , esqueleto
               , mtl ==2.2.*, transformers
               , random ==1.1.*
               , time ==1.5.*
               , text ==1.2.*
               , bytestring
               , monad-logger
               , monad-control
               , either
               , DRBG

  exposed-modules: Dismissive.Types, Dismissive.Api, Dismissive.Internal.Types

  default-extensions: OverloadedStrings
                    , NoImplicitPrelude
                    , ViewPatterns
                    , NamedFieldPuns

  default-language: Haskell2010
