name:                dismissive-core
version:             0.1.0.0
license:             MIT
license-file:        ../LICENSE
author:              Ian Henry
maintainer:          ianthehenry@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends: base <5.0, base-prelude
               , persistent
               , persistent-template
               , persistent-postgresql, postgresql-simple
               , base16-bytestring
               , esqueleto
               , mtl, transformers
               , random
               , time
               , text
               , bytestring
               , monad-logger
               , monad-control
               , transformers-base
               , either
               , DRBG

  exposed-modules: Dismissive.Types
                 , Dismissive.Api
                 , Dismissive.Internal.Types
                 , Dismissive.Internal.Stack

  default-extensions: OverloadedStrings
                    , NoImplicitPrelude
                    , ViewPatterns
                    , NamedFieldPuns

  default-language: Haskell2010
