name:                dismissive-mailer
version:             0.1.0.0
license:             MIT
license-file:        ../LICENSE
author:              Ian Henry
maintainer:          ianthehenry@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Dismissive.Mailer

  build-depends: base <5.0, base-prelude
               , wreq, lens, aeson
               , bytestring
               , either
               , mtl ==2.2.*, transformers
               , time ==1.5.*
               , text ==1.2.*

  default-extensions: OverloadedStrings
                    , NoImplicitPrelude
                    , TupleSections
                    , NamedFieldPuns
                    , RecordWildCards
                    , LambdaCase
                    , ViewPatterns

  default-language: Haskell2010
