name:                dismissive-receiver
version:             0.1.0.0
license:             MIT
license-file:        ../LICENSE
author:              Ian Henry
maintainer:          ianthehenry@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable dismissive-receiver
  main-is: Main.hs

  build-depends: base <5.0, base-prelude
               , aeson ==0.8.*
               , text ==1.2.*
               , servant-server, wai, warp, either
               , time
               , bytestring
               , mtl, transformers
               , dismissive-core
               , configurator

  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , NamedFieldPuns

  default-language: Haskell2010
