name:                dismissive-servant
version:             0.1.0.0
license:             MIT
license-file:        ../LICENSE
author:              Ian Henry
maintainer:          ianthehenry@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends: base <5.0, base-prelude
               , servant-server, wai, either
               , mtl, transformers
               , monad-logger
               , monad-control
               , dismissive-core
               , dismissive-mailer

  exposed-modules: Dismissive.Servant

  default-extensions: NoImplicitPrelude
                    , OverloadedStrings

  default-language: Haskell2010
